<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/statistics" />

        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_menu_log"
            android:title="@string/logs" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />

        <item
            android:id="@+id/nav_about_page"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
    </group>

</menu>
